<resources>
    <string name="app_name">Capstones</string>
    <string name="title_menu_1">Welcome</string>
    <string name="desc_menu_1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</string>
    <string name="learn_now">Mulai Belajar</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="title_menu_2">Everyone can teach Everyone can learn</string>
    <string name="login">Login</string>
    <string name="desclogin">Masuk untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="masukan_email_kamu">   Masukan Email kamu</string>
    <string name="masukan_password_kamu">Masukan Password Kamu</string>
    <string name="password">Password</string>
    <string name="btLogin">Login</string>
    <string name="form_pendaftaran">Form Pendaftaran</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_lengkap_kamu">Nama Lengkap kamu</string>
    <string name="date">Tanggal Lahir</string>
    <string name="masukan_tanggal_lahir">Masukan Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="masukan_nomor_telepon">Masukan Nomor Telepon</string>
    <string name="matematika">Matematika</string>
    <string name="Biologi">Biologi</string>
    <string name="fisika">Fisika</string>
    <string name="kimia">Kimia</string>
    <string name="inggris">Bahasa Inggris</string>
    <string name="indo">Bahasa Indonesia</string>
    <string name="akuntan">Akuntansi</string>
    <string name="seni">Seni</string>
    <string name="btRegis">Daftar</string>
    <string name="rekomendasi_guru">Rekomendasi Guru</string>
    <string name="sub_rekomen">Konsultasikan Tugas anda dengan pengajar</string>
    <string name="username">nama</string>
    <string name="nama_dummy">Fasrhan Maulana Malik</string>
    <string name="gender_dummy">Perempuan</string>
    <string name="age_dummy">20 Tahun</string>
    <string name="keluar">Keluar</string>
    <string name="versi_aplikasi_0_1">Versi Aplikasi 0.1</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="nomor">087719473487</string>
    <string name="email_dumy">Fasrhanmaulana@teachNGo.ac.id</string>
    <string name="pelajar_sma">Pelajar SMA</string>
    <string name="icon">icon</string>
    <string name="logo">logo</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="form_pendaftaran_pengajar">Form Pendaftaran Pengajar</string>
    <string name="txt_Link">Sebelum isi formulir pastikan anda telah mengikuti ujian pada link berikut https://www.gform.com</string>
    <string name="start">*</string>
    <string name="nilai">Masukan Nilai Anda</string>
    <string name="txt_hasilUjian">"Masukan Hasil Ujian "</string>
    <string name="minat">Minat Mengajar</string>
    <string name="tahun">Tahun Mengajar</string>
    <string name="input_tahun">Contoh: 4 Tahun</string>
    <string name="upload">"Upload Identitas "</string>
    <string name="input_indentitas">Pilih File</string>
    <string name="btUpload">Upgrade</string>
    <string name="email_not_valid">Format email tidak valid!</string>
    <string name="password_not_valid">Password kurang dari 8 karakter!</string>
    <string name="password_not_same">Password tidak sama!</string>

    <string-array name="data_item_name">
        <item>Lainnya</item>
        <item>Matematika</item>
        <item>Biologi</item>
        <item>Bahasa Inggris</item>
        <item>Fisika</item>
        <item>Akuntansi</item>
        <item>Kimia</item>
        <item>Bahasa Indonesia</item>
        <item>Sosiologi</item>
        <item>Geografi</item>
        <item>Ekonomi</item>
        <item>Seni</item>
    </string-array>

    <string-array name="data_item_photo">
        <item>@drawable/others</item>
        <item>@drawable/matematika</item>
        <item>@drawable/biologi</item>
        <item>@drawable/eng</item>
        <item>@drawable/atom</item>
        <item>@drawable/akuntan</item>
        <item>@drawable/kimia</item>
        <item>@drawable/indonesia</item>
        <item>@drawable/indonesia</item>
        <item>@drawable/indonesia</item>
        <item>@drawable/indonesia</item>
        <item>@drawable/indonesia</item>
    </string-array>

    <string-array name="data_user_photo">
        <item>@drawable/fotosiswa1</item>
        <item>@drawable/fotosiswa2</item>
        <item>@drawable/fotosiswa3</item>
    </string-array>

    <string-array name="data_user_name">
        <item>Alveria Tantri</item>
        <item>Tamara Safira</item>
        <item>Indira Shafa</item>
    </string-array>

    <string-array name="data_user_review">
        <item>Pengajarnya friendly banget</item>
        <item>Sangat membantu dalam mengerjakan tugas</item>
        <item>Materinya mudah dipahami</item>
    </string-array>

    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="ketik_pesan">Ketik pesan ...</string>
    <string name="akhiri">Akhiri</string>
    <string name="peminatan">Peminatan</string>
    <string name="konfirmasiPass">Masukan Ulang Password</string>
    <string name="passwordconf">Konfirmasi Password</string>
    <string name="informasi">Informasi</string>
    <string name="pengajar">Pengajar</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="not_phone">Masukan nomor yang aktif</string>
    <string name="validate_name">Nama harus diisi</string>
    <string name="greetings">Hi, </string>
    <string name="yearsOld"> Tahun</string>
    <string name="search_hint">Contoh: Hartati atau guru fisika</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_student">Student</string>
    <string name="tab_text_teacher">Teacher</string>
    <string name="btUbah">Ubah</string>
    <string name="ubahpass">Ubah Password</string>
    <string name="konfirpassedit">Konfirmasi Password Baru</string>
    <string name="info_pass">Kosongkan jika tidak ada perubahan!</string>
    <string name="arteris">********</string>
    <string name="Exp">Ceritakan Pengalaman kamu Mengajar</string>
</resources>