<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="69dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
       android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/pbold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/desclogin"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_edittext"
        android:fontFamily="@font/pregular"
        android:inputType="textEmailAddress"
        android:hint="@string/masukan_email_kamu"
        android:drawablePadding="18dp"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        android:drawableStart="@drawable/email_icon"
        android:textSize="14sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_edittext"
        android:inputType="textPassword"
        android:drawableStart="@drawable/pass_icon"
        android:fontFamily="@font/pregular"
        android:hint="@string/masukan_password_kamu"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        android:textSize="14sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:background="@drawable/shape_button"
        android:fontFamily="@font/pmedium"
        android:text="@string/btLogin"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/editPass"
        app:layout_constraintStart_toStartOf="@+id/editPass"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pregular"
        android:text="@string/belum_punya_akun"
        android:textSize="12sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pregular"
        android:textSize="12sp"
        android:text="@string/daftar_disini"
        android:textColor="@color/purple_200"
        android:alpha="0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

